# project_template

./: .claude  .dockerignore  .gitignore  .gitmodules  .markdownlint.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  QUICK_START.md  README.md  checklist.md  goal.md  mcp  pyproject.toml  pyrightconfig.json  responsibility-scope.toml
.agent-canon/: update-state.toml
.codex/: README.md
.codex/agents/: artifact_reviewer.toml  benchmark_reviewer.toml  detailed_design_reviewer.toml  detailed_designer.toml  docs_workflow_steward.toml  execution_planner.toml  explorer.toml  fair_data_reviewer.toml  literature_researcher.toml  ml_science_reviewer.toml  plan_reviewer.toml  project_reviewer.toml  python_reviewer.toml  report_reviewer.toml  reproducibility_reviewer.toml  requirements_organizer.toml  reviewer.toml  scientific_computing_reviewer.toml  worker.toml
.devcontainer/: devcontainer.json  generate-runtime-compose.sh  post-attach.sh  post-create.sh
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  agents  copilot-instructions.md  instructions
.github/PULL_REQUEST_TEMPLATE/: agent_canon.md
.github/scripts/: checkout_agent_canon_submodule.sh
.github/workflows/: agent-coordination.yml  agent-improvement-guide.yml  agent-runtime-dashboard.yml  ci.yml  docker-build.yml  week1-security.yml
agents/: COMMUNICATION_PROTOCOL.md  README.md  TASK_WORKFLOWS.md  USER_GUIDE_JA.md  agents_config.json  task_catalog.yaml
agents/canonical/: ARTIFACT_PLACEMENT.md  CLI_ENTRYPOINTS.md  CODEX_SUBAGENTS.md  CODEX_WORKFLOW.md  README.md  skills.md
agents/skills/: README.md  agent-orchestration.md  catalog.yaml  change-review.md  code-review.md  codex-task-workflow.md  comprehensive-review.md  critical-review.md  docs-completeness-review.md  docs-consistency-review.md  environment-maintenance.md  from_another_agent.md  md-style-check.md  project-health.md  project-review.md  python-review.md  repo-onboarding.md  report-review.md  static-check.md  static-validation.md  subagent-bootstrap.md  worktree-health.md  worktree-start.md
agents/templates/: change_review.md  design_brief.md  design_review.md  experiment_log.md  experiment_report.md  experiment_review.md  final_review.md  infra_notes.md  infra_review.md  intent_brief.md  management_review.md  research_notes.md  research_review.md  schedule.md  schedule_review.md
cmake/: ProjectTemplateJaxExport.cmake  README.md
docker/: Dockerfile  README.md  check_build.sh  codex-container-profiles.toml  install_python_dependencies.sh  python-execution-rules.toml  register_safe_directories.sh  requirements.txt
docker/packs/: default-host-docker.toml  default.toml
documents/: AGENTS_COORDINATION.md  BRANCH_SCOPE.md  DOCSTRING_GUIDE.md  FILE_CHECKLIST_OPERATIONS.md  README.md  REVIEW_PROCESS.md  SHARED_RUNTIME_SURFACES.md  SKILL_IMPLEMENTATION_GUIDE.md  TEAM_IMPLEMENTATION_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW_GUIDE.md  WORKFLOW_GUIDE_EXPERIMENTER.md  WORKFLOW_GUIDE_IMPLEMENTER.md  WORKFLOW_GUIDE_OPERATIONS.md  WORKFLOW_INVENTORY.md  WORKTREE_SCOPE_TEMPLATE.md  agent-canon-parent-repo-latest-checklist.md  agent-canon-pr-workflow.md  agent-canon-subtree-migration.md  agent-learning-workflow.md  algorithm-implementation-boundary.md  codex-configuration-reference.md  codex-configuration-slides.md  coding-conventions-cpp.md  coding-conventions-experiments.md  coding-conventions-house-style.md  coding-conventions-logging.md  coding-conventions-project.md  coding-conventions-python.md  coding-conventions-reviews.md  coding-conventions-testing.md  coding-conventions.md  cpp-build-layout.md  dependency-manifest-design.md  experiment-readme-contract-r9.json  experiment-readme-contract-r9.md  experiment-workflow.md  functional-discretization-design.md  github-copilot-configuration.md  github-first-module-and-devcontainer-policy.md  (+18 more)
documents/conventions/: README.md
documents/design/: README.md  codex-spark-implementation-routing.md  protocols.md
documents/templates/: README.md  remote_execution_repo.template.toml  remote_execution_target.template.toml  server_host_inventory.template.md  server_runtime_layout.template.toml
documents/tools/: README.md  TOOLS_DIRECTORY.md  tool-docs.toml
experiments/: README.md  registry.toml
experiments/_template/: README.md  cases.py  config.yaml  experimentcode.py  run.py
experiments/report/: README.md
include/project_template/: jax_export_smoke.hpp
jupyter/: nonlinear_solution.html  test_primitive.ipynb
notes/: README.md
notes/experiments/: README.md
notes/failures/: README.md
notes/guardrails/: README.md  engineering_avoidances.md
notes/knowledge/: README.md  benchmark_levels_analysis.md  experiment_directory_planning.md  experiment_operations.md  imported_battery_lp_model_analysis.md  pyright_operations.md
notes/themes/: AGENT_PHILOSOPHY.md  README.md  USER_PREFERENCES.md  from_another_agent.md
notes/worktrees/: README.md
python/docomo_bt_management/: pdipm_smoke.py
references/: README.md
references/workflow/: implementation-waterfall.md
reports/: goal_work_breakdown.md
scripts/: README.md  agent_tools  init_from_template.sh  push_origin.sh  run_comprehensive_review.sh  run_pytest_with_logs.sh  setup_worktree.sh  start_repository.sh  sync_agent_canon.sh  worktree_start.sh
scripts/agent_tools/: smoke_test_research_perspective_pack.py  worktree_scope_lint.py  worktree_start.py
scripts/ci/: EXECUTION_SUMMARY.md  PRE_REVIEW_GUIDE.md  PRE_REVIEW_VALIDATION.md  check_docker_build.sh  check_jax_export_stack.py  check_merge_structure.py  container_runtime.py  pre_review.sh  run_all_checks.sh  run_codex_in_repo_container.py  run_docs_checks.sh  run_in_repo_container.py  run_python_in_dockerfile.py
scripts/tools/: check_worktree_scopes.sh  create_worktree.sh  mirror_skill_shims.py
src/: README.md
tests/: __init__.py  conftest.py
tests/agent_tools/: __init__.py  test_agent_canon_log_management_check.py  test_analyze_oop_readability.py  test_check_agent_runtime_alignment.py  test_check_algorithm_module_nested_contract.py  test_check_algorithm_module_public_surface.py  (+36 more)
(+481 files in other folders)
