[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docomo_bt_management"
version = "0.1.0"
description = "Template repository for implementation, experiments, and agent workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "scipy-stubs",
  "pydocstyle>=6.3",
  "pyyaml>=6",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "UP"]
# D: docstring チェック
# UP: Python 最新構文への自動升格

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pyright]
# 型検査は strict を基本方針とします。
typeCheckingMode = "strict"

# この template では `python/` 全体を baseline として扱います。
include = ["./python", "./tests"]
exclude = [
  "**/.*",
  "**/node_modules",
  "**/__pycache__",
  "**/build",
  "**/dist",
  "**/reports",
  "**/experiments",
  "**/*.egg-info",
  "./references",
  "./notes",
  "./diary",
  "./includes",
  "./lib",
  "./src",
  "./scripts",
  "./.worktrees",
]

# ローカルパッケージ解決のため、python を追加します。
extraPaths = ["./python"]
stubPath = "./python/typings"


reportUnusedVariable = "warning"
reportConstantRedefinition = "warning"
reportMissingTypeStubs = "warning"

[tool.pydocstyle]
# Docstring 規約の設定
# D100: モジュール docstring 必須
# D101: クラス docstring 必須
# D102: パブリックメソッド docstring 必須
# D103: 関数 docstring 必須
# D104-D105: パッケージ/Magic method は除外
match = ".*\\.py"
match_dir = ".*"
# プライベート関数 (_prefix) の docstring チェックは除外
ignore = ["D104", "D105", "D107", "D203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
